@@ -5,6 +5,7 @@ Pint Changelog
 -------------------
 
 - Add docs to the functions in ``pint.testing`` (PR #2070)
+- Fix round function returning float instead of int (#2081)
 
 
 0.24.4 (2024-11-07)
